--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -8,7 +8,7 @@ on:
       - 'n8nmanager/changelogs/*.md'
 
 jobs:
-  update-index:
+  update-changelog:
     runs-on: ubuntu-latest
 
     permissions:
@@ -52,5 +52,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add n8nmanager/changelog.html n8nmanager/sitemap.xml
-          git commit -m "chore: auto-update changelog and sitemap ($(date '+%Y-%m-%d')) [skip ci]"
+          git commit -m "chore: auto-update changelog and sitemap ($(date '+%Y-%m-%d'))"
           git push
