change: 變更 changelogs 位置

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'n8nmanager/changelogs/*.md'
+      - 'changelogs/*.md'
 
 jobs:
   update-changelog:
